maze.lessons.maze.island.IslandMaze.scala.error
Escaper:38: error: ';' expected but ']' found.
] 
^Escaper:41: error: Unmatched closing brace '}' ignored here
}
^